<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feedbackFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/feedback_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:drawableStartCompat="@drawable/left_arrow"
            tools:ignore="NestedWeights" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center|start"
            android:text="@string/give_feedback"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_do"
        android:gravity="center|start"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingStart="15dp"
        android:layout_marginVertical="14dp"
         />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:numStars="5"
        android:id="@+id/feedback_rating"
        android:theme="@style/RatingBar"
        android:rating="1"
        android:stepSize="1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more_about_it"
        android:gravity="center|start"
        android:textSize="20sp"
        android:layout_marginVertical="14dp"
        android:textStyle="bold"
        android:paddingStart="15dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="15dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="11dp"
            android:fillViewport="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_gravity="start"
                android:id="@+id/feedback_text"
                tools:ignore="ScrollViewSize" />

        </ScrollView>

    </androidx.cardview.widget.CardView>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="30dp"
        android:layout_gravity="bottom"
        android:id="@+id/feedback_send"
        android:text="@string/send_feedback"
        android:drawableEnd="@drawable/arrow_next"
        android:background="@drawable/background_btn_addf_red"/>


</LinearLayout>