<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".myprofileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/myprofile_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights"
            app:drawableStartCompat="@drawable/left_arrow" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center|start"
            android:text="@string/my_profile"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/myprofile_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:drawableStartCompat="@drawable/ok" />


    </LinearLayout>
<!--    <TextView-->
<!--        android:id="@+id/myprofile_pic"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="2"-->
<!--        android:drawableTop="@drawable/male_user"-->
<!--        android:paddingTop="15dp"-->
<!--        android:scaleType="fitCenter" />-->

   <de.hdodenhof.circleimageview.CircleImageView
       android:layout_width="match_parent"
       android:layout_height="150dp"
       android:id="@+id/myprofile_image"
       android:src="@drawable/male_user"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <EditText
            android:id="@+id/myprofile_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:inputType="text"
            android:autofillHints="aa" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <EditText
            android:id="@+id/myprofile_email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:inputType="textEmailAddress"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/password"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <EditText
            android:id="@+id/myprofile_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:padding="10dp"
                android:text="@string/gender"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:id="@+id/myprofile_gender"
                android:padding="10dp"
                android:textSize="20sp"
                android:gravity="center|start"
                tools:ignore="NestedWeights" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="start"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            >



            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/myprofile_man"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/man_account" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/myprofile_woman"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                app:lottie_autoPlay="true"
                android:scaleType="fitXY"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/woman_account" />
        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


</LinearLayout>